--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap-icons": "^1.10.5",
+    "fs": "^0.0.1-security",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
-    "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-jwt": "^1.1.8",
     "react-router-dom": "^6.11.2",
