--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap-icons": "^1.10.5",
+    "compressorjs": "^1.2.1",
     "fs": "^0.0.1-security",
+    "html2canvas": "^1.4.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "path": "^0.12.7",
+    "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "^4.2.67",
+    "pica": "^9.0.1",
     "react": "^18.2.0",
     "react-jwt": "^1.1.8",
     "react-router-dom": "^6.11.2",
